--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "Server=tcp:westcoast-cars-server-ludvig.database.windows.net,1433;Initial Catalog=ludvigDB2;Persist Security Info=False;User ID=ludvig;Password=Malmen75;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   
   "Logging": {
